--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@ body{
     font-weight: 300;
     color: #777777;
 }
-
-/* strat header */
+/* start header */
 header{
     background-image: url('../img/banner_bg.jpg');
     background-size: cover;
@@ -36,7 +35,7 @@ header
 /* start navbar */
 .navbar{
     background: #fff;
-    height: 80px;
+    min-height: 80px;
     z-index: 3;
 }
 .navbar .navbar-toggler{
@@ -94,6 +93,9 @@ header
     text-transform: uppercase;
     font-weight: 600;
 }
+.content .hvr-sweep-to-right::before{
+    background-color: #f3c300;
+}
 /* end content */
 
 /* start book */
@@ -119,6 +121,10 @@ header
     right: 5px;
     top: 11px;
 }
+.book form .form-group:focus{
+    outline: none;
+    box-shadow: none;
+}
 .book form .form-control{
     border-radius: 0;
     -webkit-border-radius: 0;
@@ -127,26 +133,369 @@ header
     -o-border-radius: 0;
     background-color: transparent;
     border: 1px solid #2b3146;
-    color: #fff;
+    color: #777;
     font-weight: 300;
+    width: 100%;
 }
 .book form ::placeholder{
     color: #777;
     font-weight: 100;
 }
-.book form input[type="submit"]{
+.book form button.btn{
     border-radius: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     -ms-border-radius: 0;
     -o-border-radius: 0;
     text-transform: uppercase;
+    background-color: #ffc107;
+    border: 1px solid #ffc107;
+    color: #fff;
+}
+.book form .hvr-sweep-to-right::before{
+    background-color: #f3c300;
+}
+.book .list{
+    width: 100%;
 }
 /* end book */
 /* end header */
 
+/* start rooms */
+.rooms{
+    padding: 120px 0;
+}
+.rooms h2{
+    color: #000;
+    font-weight: 600;
+    font-size: 36px;
+    margin-bottom: 8px;
+}
+.rooms .rooms__gallery{
+    margin-top: 80px;
+}
+.rooms .room{
+    margin-bottom: 30px;
+}
+.room .room-img{
+    position: relative;
+    margin-bottom: 15px;
+    overflow: hidden;
+    border-radius: 3%;
+    -webkit-border-radius: 3%;
+    -moz-border-radius: 3%;
+    -ms-border-radius: 3%;
+    -o-border-radius: 3%;
+    -o-border-radius: 3%;
+}
+.rooms .room img{
+    width: 100%;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+.rooms .room:hover img{
+    transform: scale(1.19);
+    -webkit-transform: scale(1.19);
+    -moz-transform: scale(1.19);
+    -ms-transform: scale(1.19);
+    -o-transform: scale(1.19);
+}
+.rooms .room .btn{
+    position: absolute;
+    bottom: 20px;
+    left: 40px;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    padding: 7px 20px;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 600;
+}
+.rooms .room .hvr-sweep-to-right::before{
+    background-color: #f3c300;
+}
+.room h4{
+    color: #000;
+    font-weight: 600;
+    font-size: 20px;
+}
+.room h5{
+    color: #52c5fd;
+    font-size: 14px;
+    font-weight: 200;
+}
+/* end rooms */
+
+/* start facilities */
+.facilities{
+    min-height: 700px;
+    background-image: url('../img/facilites_bg.jpg');
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+.facilities .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(4, 9, 30, 0.8);
+    z-index: -1;
+}
+.facilities .facilities__content{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.facilities .facilities__header{
+    margin-bottom: 75px;
+}
+.facilities .facilities__header h2{
+    color: #fff;
+}
+.facilities .facility{
+    color: #fff;
+    padding: 20px;
+    border: 1px solid #777;
+    border-radius: 10px;
+    background-color: rgba(249, 249, 255, 0.102);
+}
+.facilities .facility h4 i{
+    color: #f3c300;
+    font-size: 24px;
+    margin-right: 20px;
+}
+.facilities .facility p{
+    font-size: 14px;
+    margin-top: 20px;
+    line-height: 24px;
+}
+/* end facilities */
+
+/* start about */
+.about{
+    padding: 120px 0;
+}
+.about .row > div{
+    margin-bottom: 50px;
+}
+.about .about__content h2{
+    color: #000;
+    margin-bottom: 30px;
+}
+.about .about__content .btn{
+    background-color: #000;
+    color: #fff;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    padding: 7px 17px;
+    border: none;
+    margin-top: 40px;
+}
+.about .about__content .hvr-sweep-to-right::before{
+    background-color: #f3c300;
+   
+}
+/* end about */
+
+/* start testimonial */
+.testimonial{
+    padding: 120px 0;
+    background-color: #f9f9ff;
+}
+.testimonial .testimonial__content{
+    margin-bottom: 70px;
+}
+.testimonial .testimonial__content h2{
+    color: #000;
+}
+.testimonial .item{
+    background-color: #fff;
+    border: 1px solid #eee;
+    padding: 40px 30px;
+}
+.testimonial .item a h4{
+    color: #000;
+    text-decoration: none;
+}
+.testimonial .item .star{
+    color: #f3c300;
+}
+.testimonial .owl-theme .owl-dots .owl-dot{
+    outline: none;
+}
+.testimonial .owl-theme .owl-dots .owl-dot span{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+}
+.testimonial .owl-theme .owl-dots .owl-dot.active span{
+    background-color: #f3c300 !important;
+}
+/* end testimonial */
+
+/* start blogs */
+.blogs{
+    padding: 120px 0;
+}
+.blogs .blogs__content{
+    margin-bottom: 70px;
+}
+.blogs .blogs__content h2{
+    color: #000;
+}
+.blogs .blog .blog__img{
+    overflow: hidden;
+}
+.blogs .blog .blog__img img:hover{
+    transform: rotate(10deg) scale(1.3);
+    -webkit-transform: rotate(10deg) scale(1.3);
+    -moz-transform: rotate(10deg) scale(1.3);
+    -ms-transform: rotate(10deg) scale(1.3);
+    -o-transform: rotate(10deg) scale(1.3);
+}
+.blogs .blog .blog__img img{
+    transition: all 0.8s ease-in-out;
+    -webkit-transition: all 0.8s ease-in-out;
+    -moz-transition: all 0.8s ease-in-out;
+    -ms-transition: all 0.8s ease-in-out;
+    -o-transition: all 0.8s ease-in-out;
+}
+.blogs .blog .blog__details{
+    padding: 30px 0;
+}
+.blogs .blog .blog__details a{
+    text-decoration: none;
+}
+.blogs .blog .blog__details a.d-inline-block{
+    color: #000;
+    background: #fff;
+    border: 1px solid #eee;
+    font-weight: 400;
+}
+.blogs .blog__details .hvr-sweep-to-right::before{
+    background-color: #f3c300;
+}
+.blogs .blog .blog__details h4{
+    margin: 20px 0;
+    color: #000;
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+}
+.blogs .blog .blog__details h4:hover{
+    color: #52c5fd;
+}
+.blogs .blog .blog__details h6{
+    color: #000;
+    font-weight: 300;
+}
+/* end blogs */
+
+/* start footer */
+footer{
+    padding: 140px 0;
+    background-color: #04091e;
+}
+footer .row > div{
+    margin-bottom: 20px;
+}
+footer h5{
+    color: #fff;
+    margin-bottom: 30px;
+}
+footer .footer__links li{
+    margin-bottom: 20px;
+}
+footer .footer__links a{
+    color: #777;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+footer .footer__links a:hover{
+    color: #f7c707;
+}
+footer .footer__newsletter form{
+    margin-top: 40px;
+}
+footer .footer__newsletter .form-group{
+    position: relative;
+}
+footer .footer__newsletter input{
+    width: 100%;
+    background-color: transparent;
+    padding: 6px;
+    border: 1px solid #464646;
+    outline: none;
+}
+footer .footer__newsletter button{
+    background-color: #f3c300;
+    border: none;
+    outline: none;
+    color: #fff;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 40px;
+}
+footer .line{
+    width: 100%;
+    height: 1px;
+    background-color: #444;
+    margin: 30px 0;
+}
+footer .copyright i{
+    color: #f00;
+}
+footer .copyright span{
+    color: #f3c300;
+}
+footer .social a{
+    text-decoration: none;
+    line-height: 30px;
+    color: #82848f;
+    font-size: 18px;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+footer .social a:hover{
+    color: #f3c300;
+}
+/* end footer */
 
 /* media query */
+
+/* Extra Small devices (small phones ,less than 576px ) */
+@media (max-width: 575px){
+    /* rooms */
+    .rooms .room .btn{
+        left: 80px;
+    }
+}
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767px) {
@@ -154,6 +503,11 @@ header
     header .book{
         margin: 0;
         min-width: 100%;
+    }
+
+    /* rooms */
+    .rooms .room .btn{
+        left: 30px;
     }
 }
 
@@ -163,6 +517,11 @@ header
     header .book{
         margin: 0;
         min-width: 100%;
+    }
+
+    /* rooms */
+    .rooms .room .btn{
+        left: 80px;
     }
 }
 
