--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@ body {
   color: #777777;
 }
 
+.about .col-md-6 .about__content .hvr-sweep-to-right, .rooms .rooms__gallery .room .room-img .hvr-sweep-to-right, header .book form .hvr-sweep-to-right, header .book form .form-group .form-control, header .content .btn {
+  border-radius: 0px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+}
+
 /* start header */
 header {
   background-image: url("../img/banner_bg.jpg");
@@ -87,7 +95,6 @@ header .content p {
 }
 header .content .btn {
   padding: 8px 23px;
-  border-radius: 0;
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
@@ -118,23 +125,16 @@ header .book form .form-group span i {
   top: 11px;
 }
 header .book form .form-group .form-control {
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
   background-color: transparent;
   border: 1px solid #2b3146;
   color: #777;
   font-weight: 300;
   width: 100%;
 }
+header .book form .form-group .nice-select.open .list {
+  width: 100%;
+}
 header .book form .hvr-sweep-to-right {
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
   text-transform: uppercase;
   background-color: #ffc107;
   border: 1px solid #ffc107;
@@ -174,7 +174,6 @@ header .book form::placeholder {
   -moz-border-radius: 3%;
   -ms-border-radius: 3%;
   -o-border-radius: 3%;
-  -o-border-radius: 3%;
 }
 .rooms .rooms__gallery .room .room-img img {
   width: 100%;
@@ -188,11 +187,6 @@ header .book form::placeholder {
   position: absolute;
   bottom: 20px;
   left: 40px;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
   padding: 7px 20px;
   text-transform: uppercase;
   color: #fff;
@@ -252,6 +246,10 @@ header .book form::placeholder {
   padding: 20px;
   border: 1px solid #777;
   border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
   background-color: rgba(249, 249, 255, 0.102);
 }
 .facilities .facilities__content .facility h4 i {
@@ -280,11 +278,6 @@ header .book form::placeholder {
 .about .col-md-6 .about__content .hvr-sweep-to-right {
   background-color: #000;
   color: #fff;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
   padding: 7px 17px;
   border: none;
   margin-top: 40px;
