--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,16 @@ body{
     font-weight: 300;
     color: #777777;
 }
+@mixin borderRaduis($val) {
+    border-radius: $val;
+    -webkit-border-radius: $val;
+    -moz-border-radius: $val;
+    -ms-border-radius: $val;
+    -o-border-radius: $val;
+}
+%borderLess{
+    @include borderRaduis(0px);
+}
 /* start header */
 header{
     background-image: url('../img/banner_bg.jpg');
@@ -87,8 +97,8 @@ header{
             padding: 10px 0px 20px;
         }
         .btn{
+            @extend %borderLess;
             padding: 8px 23px;
-            border-radius: 0;
             color: #fff;
             text-transform: uppercase;
             font-weight: 600;
@@ -119,11 +129,7 @@ header{
                     top: 11px;
                 }
                 .form-control{
-                    border-radius: 0;
-                    -webkit-border-radius: 0;
-                    -moz-border-radius: 0;
-                    -ms-border-radius: 0;
-                    -o-border-radius: 0;
+                    @extend %borderLess;
                     background-color: transparent;
                     border: 1px solid #2b3146;
                     color: #777;
@@ -131,13 +137,12 @@ header{
                     width: 100%;
                     
                 }
+                .nice-select.open .list{
+                    width: 100%
+                }
             }
             .hvr-sweep-to-right{
-                border-radius: 0;
-                -webkit-border-radius: 0;
-                -moz-border-radius: 0;
-                -ms-border-radius: 0;
-                -o-border-radius: 0;
+                @extend %borderLess;
                 text-transform: uppercase;
                 background-color: #ffc107;
                 border: 1px solid #ffc107;
@@ -172,12 +177,7 @@ header{
                 position: relative;
                 margin-bottom: 15px;
                 overflow: hidden;
-                border-radius: 3%;
-                -webkit-border-radius: 3%;
-                -moz-border-radius: 3%;
-                -ms-border-radius: 3%;
-                -o-border-radius: 3%;
-                -o-border-radius: 3%;
+                @include borderRaduis(3%);
                 img{
                     width: 100%;
                     transition: all 0.4s linear;
@@ -190,11 +190,7 @@ header{
                     position: absolute;
                     bottom: 20px;
                     left: 40px;
-                    border-radius: 0;
-                    -webkit-border-radius: 0;
-                    -moz-border-radius: 0;
-                    -ms-border-radius: 0;
-                    -o-border-radius: 0;
+                    @extend %borderLess;
                     padding: 7px 20px;
                     text-transform: uppercase;
                     color: #fff;
@@ -257,7 +253,7 @@ header{
             color: #fff;
             padding: 20px;
             border: 1px solid #777;
-            border-radius: 10px;
+            @include borderRaduis(10px);
             background-color: rgba(249, 249, 255, 0.102);
             h4 i{
                 color: $mainColor;
@@ -285,13 +281,9 @@ header{
                 margin-bottom: 30px;
             }
             .hvr-sweep-to-right{
+                @extend %borderLess;
                 background-color: #000;
                 color: #fff;
-                border-radius: 0;
-                -webkit-border-radius: 0;
-                -moz-border-radius: 0;
-                -ms-border-radius: 0;
-                -o-border-radius: 0;
                 padding: 7px 17px;
                 border: none;
                 margin-top: 40px;
@@ -337,11 +329,7 @@ header{
                 display: inline-block;
                 width: 20px;
                 height: 20px;
-                border-radius: 2px;
-                -webkit-border-radius: 2px;
-                -moz-border-radius: 2px;
-                -ms-border-radius: 2px;
-                -o-border-radius: 2px;
+                @include borderRaduis(2px);
             }
             &.active{
                 span{
